--- a/omod/src/main/webapp/resources/hidePatientHeaderRow.css
+++ b/omod/src/main/webapp/resources/hidePatientHeaderRow.css
@@ -1,5 +1,9 @@
- #patientHeaderObs { display: none }
+#patientHeaderObs { display: none }
  
- #patientSubheader { display: none }
+#patientSubheader { display: none }
  
- .patientLastEncounterTable { display: none }
+.patientLastEncounterTable { display: none }
+
+#patientRelationshipsBoxHeader { display: none }
+
+#patientRelationshipsBox { display: none }
